--- a/about.html
+++ b/about.html
@@ -394,8 +394,8 @@
 Oversees architecture design and ensures top-tier performance.</p>
       </div>
       <div class="founder-card">
-        <img src="https://github.com/helixcloud-01/Website_NotOpenSource/blob/main/steel.png?raw=true" alt="SteelDev" class="founder-img>
-        <div class="founder-name">SteelDev</div>
+        <img src="https://github.com/helixcloud-01/Website_NotOpenSource/blob/main/steel.png?raw=true" alt="July" class="founder-img">
+        <div class="founder-name">SteeDev</div>
         <div class="role-badge">VPS Manager</div>
         <p class="founder-desc">Expert in VPS infrastructure and system scalability and focused on delivering reliable, secure, and high-speed hosting environments.</p>
       </div>
