--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@
     <p class="founders-subtext">HelixCloud was created by two passionate developers who wanted to revolutionize game server hosting.</p>
     <div class="founders-grid">
       <div class="founder-card">
-        <img src="https://github.com/helixcloud-01/Website_OpenSource/blob/main/lostdude.png?raw=true" alt="LostDude" class="founder-img">
+        <img src="https://raw.githubusercontent.com/helixcloud-01/Website_NotOpenSource/refs/heads/main/bofu-shaw-rC--YcGXrOg-unsplash.webp" alt="LostDude" class="founder-img">
         <div class="founder-name">LostDude .</div>
         <div class="role-badge">Founder</div>
         <p class="founder-desc">A skilled developer with a strong background in server systems.
